<resources>
    <string name="app_name">My Application</string>
    <string name="calculate">Calculate</string>
    <string name="number_hint">1234</string>
    <string name="result">Result …</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
</resources>
